src/test/ui/infinite/infinite-recursion-const-fn.stderr
error[E0080]: evaluation of constant value failed
  --> $DIR/infinite-recursion-const-fn.rs:13:25
   |
LL | const fn a() -> usize { b() } //~ ERROR evaluation of constant value failed
   |                         ^^^
   |                         |
   |                         reached the configured maximum number of stack frames
   |                         inside call to `b`
LL | const fn b() -> usize { a() }
   |                         ---
   |                         |
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
   |                         inside call to `a`
LL | const ARR: [i32; a()] = [5; 6];
   |                  --- inside call to `a`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
